--- a/src/components/usersBid/UsersBid.scss
+++ b/src/components/usersBid/UsersBid.scss
@@ -55,3 +55,31 @@
         margin-top: 5px;
     }
 }
+
+@media (max-width: 480px) {
+    .crash{
+        margin-top: 100px;
+        &__title{
+            &::after{
+                display: none ;
+            }
+            &_user{
+                &::after{
+                    display: none ;
+                }
+            }
+        }
+    }
+    .usersBid{
+        width: 150px;
+        height: 240px;
+        img{
+            width: 130px;
+            height: 130px;
+        }
+        &__userStatus{
+            width: 130px;
+            margin-top: 5px;
+        }
+    }
+}
