--- a/src/pages/home/statistic/Statistic.scss
+++ b/src/pages/home/statistic/Statistic.scss
@@ -306,9 +306,10 @@
         width: 486px;
         margin: 50px 0;
         height: 400px;
+        gap: 5px;
         &__time{
             grid-area: 1 / 1 / 2 / 5;
-            width: 400px;
+            width: 360px;
             &Graphic{
                 margin-left: 10px;
             }
@@ -318,9 +319,8 @@
         }
         &__earn{
             grid-area: 2 / 3 / 3 / 3;
-            margin-left: 0px;
-            width: 180px;
-            margin-left: 10px;
+            width: 155px;
+            margin-left: -10px;
             position: relative;
             left: 50px;
             &Sum{
@@ -343,8 +343,8 @@
         }
         &__exp{
             grid-area: 3 / 3 / 4 / 5;
-            width: 180px;
-            margin-left: 10px;
+            width: 155px;
+            margin-left: -10px;
             position: relative;
             left: 50px;
             &Sum{
