--- a/src/pages/jackrunGame/Jackrun.scss
+++ b/src/pages/jackrunGame/Jackrun.scss
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: flex-start;
         flex-wrap: wrap;
-        gap: 99px;
+        gap:10px !important;
     }
 }
 
