--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 112px !important;
     background: #1C191B;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.5);
+    // box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.5);
     padding: 35px 25px 25px 25px;
     &__wrapper{
         display: flex;
@@ -98,6 +98,7 @@
 }
 /* Landscape phones and portrait tablets */
 @media (min-width: 481px) and (max-width: 767px) {
+    
     .header__wrapper{
         display: none;
     }
@@ -184,6 +185,9 @@
 
 /* Landscape phones and smaller */
 @media (max-width: 480px) {
+    .header{
+
+    }
     .header__wrapper{
         display: none;
     }
