--- a/src/pages/home/HomePage.scss
+++ b/src/pages/home/HomePage.scss
@@ -75,6 +75,10 @@
         justify-content: center;
         gap: 8px;
     }
+    body {
+        overflow-x: hidden;
+        max-width: 100vw;
+        }
 }
 
 
