--- a/src/pages/home/statistic/Statistic.scss
+++ b/src/pages/home/statistic/Statistic.scss
@@ -303,10 +303,10 @@
 /* Landscape phones and smaller */
 @media (max-width: 480px) {
     .statistic{
-        width: 486px;
+        width: 280px;
         margin: 50px 0;
         height: 400px;
-        gap: 5px;
+        gap: 35px !important;
         &__time{
             grid-area: 1 / 1 / 2 / 5;
             width: 320px;
@@ -320,7 +320,7 @@
         &__earn{
             grid-area: 2 / 3 / 3 / 3;
             width: 140px;
-            margin-left: -40px;
+            margin-left: 30px !important;
             position: relative;
             left: 50px;
             &Sum{
@@ -344,9 +344,8 @@
         &__exp{
             grid-area: 3 / 3 / 4 / 5;
             width: 140px;
-            margin-left: -40px;
+            margin-left: 80px !important;
             position: relative;
-            left: 50px;
             &Sum{
                 font-size: 20px;
             }
