--- a/src/pages/doubleGame/gameDouble/GameDouble.scss
+++ b/src/pages/doubleGame/gameDouble/GameDouble.scss
@@ -745,6 +745,7 @@
             }
             &LastInfo{
                 width: 45px;
+                height: 45px;
                 padding: 12px;
                 &:nth-child(4){
                     padding: 12px 18px;
