--- a/src/pages/jackrunGame/gameJackrun/GameJackrun.scss
+++ b/src/pages/jackrunGame/gameJackrun/GameJackrun.scss
@@ -768,6 +768,9 @@
         }
         &__bid{
             width: 320px;
+            &Cost{
+                right: 30px;
+            }
             &Info{
                 width: 320px;
             }
