--- a/src/pages/jackrunGame/Jackrun.scss
+++ b/src/pages/jackrunGame/Jackrun.scss
@@ -16,3 +16,14 @@
     }
 }
 
+@media (max-width: 480px) {
+    .jackrun{
+        &__users{
+            display: flex;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            gap:8px !important;
+        }
+    }
+}
+
