--- a/src/pages/home/promo/Promo.scss
+++ b/src/pages/home/promo/Promo.scss
@@ -164,6 +164,9 @@
             &_wrapper{
                 width: 290px;
             }
+            &Button{
+                left: 15%;
+            }
         }
         &__newUser{
             width: 290px;
