--- a/src/pages/home/game/Game.scss
+++ b/src/pages/home/game/Game.scss
@@ -127,6 +127,7 @@
         width: 307px;
         height: 190px;
         background-size: 100%;
+        flex-shrink: 0;
         &__wrapper{
             width: 307px;
             height: 190px;
