--- a/src/pages/home/current/Current.scss
+++ b/src/pages/home/current/Current.scss
@@ -42,7 +42,9 @@
         position: absolute;
         left: 533px;
         bottom: -20px;
-        padding: 10px 12px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 113px;
         height: 20px;
         font-family: OxaniumMedium;
