--- a/src/pages/home/statistic/Statistic.scss
+++ b/src/pages/home/statistic/Statistic.scss
@@ -303,10 +303,11 @@
 /* Landscape phones and smaller */
 @media (max-width: 480px) {
     .statistic{
-        width: 280px;
-        margin: 50px 0;
+        width: 100%;
+        margin: 50px auto;
         height: 400px;
         grid-column-gap: 5px !important;
+        align-items: center;
         &__time{
             grid-area: 1 / 1 / 2 / 5;
             width: 320px;
@@ -323,7 +324,7 @@
             // margin-left: 30px !important;
             position: relative;
             &Sum{
-                font-size: 20px;
+                font-size: 15px;
             }
         }
         &__victory{
@@ -346,7 +347,7 @@
             // margin-left: 80px !important;
             position: relative;
             &Sum{
-                font-size: 20px;
+                font-size: 15px;
             }
         }
     }
