--- a/src/pages/userCab/userMain/UserMain.scss
+++ b/src/pages/userCab/userMain/UserMain.scss
@@ -282,6 +282,9 @@
                             width: 100px;
                         }
                     }
+                    &DangerDescr{
+                        font-size: 15px;
+                    }
                 }
                 &Exit{
                     width: 360px;
@@ -341,6 +344,9 @@
                     }
                     &Danger{
                         margin-left: -10px;
+                        &Descr{
+                            font-size: 15px;
+                        }
                     }
                 }
                 &Exit{
@@ -451,6 +457,9 @@
                     }
                     &Danger{
                         margin-left: -10px;
+                        &Descr{
+                            font-size: 15px;
+                        }
                     }
                 }
                 &Exit{
@@ -460,7 +469,7 @@
                     margin-top: 10px;
                     padding: 12px 5px;
                     &Descr{
-                        font-size: 11px;
+                        font-size: 9px;
                     }
                 }
             }
@@ -470,6 +479,9 @@
             padding: 20px;
             margin-top: -45px;
             background-position: 200px 40px;
+            &Descr{
+                font-size: 14px;
+            }
             &Form{
                 flex-direction: column;
                 align-items: flex-start;
