--- a/src/pages/userCab/referal/Referal.scss
+++ b/src/pages/userCab/referal/Referal.scss
@@ -451,6 +451,7 @@
         
         &__link{
             width: 290px;
+            padding: 15px;
             &Title{
                 font-size: 14px;
             }
@@ -514,7 +515,7 @@
                         width: 30px;
                         height: 30px;
                         margin-top: 10px;
-                        padding: 5px 10px;
+                        padding: 2px 9.5px;
                         
                     }
                     &Percent{
