--- a/src/pages/home/HomePage.scss
+++ b/src/pages/home/HomePage.scss
@@ -18,8 +18,8 @@
         background: #DB442A;
         position: absolute;
         display: block;
-        top: 0;
-        left: 200px;
+        top: 10px;
+        left: 300px;
         right: 0;
         bottom: 0;
         margin: auto;
@@ -74,7 +74,7 @@
     body {
         overflow-x: hidden;
         max-width: 100vw;
-        }
+    }
 }
 
 
