--- a/src/pages/home/statistic/Statistic.scss
+++ b/src/pages/home/statistic/Statistic.scss
@@ -303,7 +303,7 @@
 /* Landscape phones and smaller */
 @media (max-width: 480px) {
     .statistic{
-        width: 100%;
+        width: 290px;
         margin: 150px auto 0 auto;
         height: 400px;
         grid-row-gap: 55px !important;
@@ -312,7 +312,7 @@
         grid-template-rows: 0;
         &__time{
             grid-area: 1 / 1 / 2 / 5;
-            width: 100%;
+            width: 290px;
             &Graphic{
                 margin-left: 10px;
             }
@@ -323,7 +323,7 @@
         &__earn{
             grid-area: 2 / 3 / 3 / 3;
             width: 140px;
-            margin-left: 30px !important;
+            margin-left: -5px !important;
             position: relative;
             &Sum{
                 font-size: 15px;
@@ -348,7 +348,7 @@
             grid-area: 3 / 3 / 4 / 5;
             width: 140px;
             margin-top: -130px;
-            margin-left: 30px !important;
+            margin-left: -5px !important;
             position: relative;
             &Sum{
                 font-size: 15px;
