--- a/src/pages/jackrunGame/Jackrun.scss
+++ b/src/pages/jackrunGame/Jackrun.scss
@@ -12,15 +12,18 @@
         display: flex;
         justify-content: flex-start;
         flex-wrap: wrap;
-        gap:10px !important;
+        gap:87px !important;
     }
 }
 
 @media (max-width: 480px) {
     .jackrun{
+        .container{
+            padding: 0 10px !important;
+        }
         &__users{
             display: flex;
-            justify-content: flex-start;
+            justify-content: center;
             flex-wrap: wrap;
             gap:8px !important;
         }
