--- a/src/pages/crashGame/gameCrash/GameCrash.scss
+++ b/src/pages/crashGame/gameCrash/GameCrash.scss
@@ -696,6 +696,10 @@
             }
             &Info{
                 width: 300px;
+                &Icon{
+                    width: 18px;
+                    height: 18px;
+                }
             }
             &XItem{
                 width: 77px;
