--- a/src/components/auth/Auth.scss
+++ b/src/components/auth/Auth.scss
@@ -3,7 +3,7 @@
     height: 50px;
     border: 1px solid #FFFFFF;
     border-radius: 100px;
-    padding: 5px 10px;
+    padding: 5px 17px;
     display: flex;
     justify-content: flex-start;
     gap: 10px;
@@ -13,11 +13,15 @@
         border: 1px solid #858585;
     }
     &Icon{
-        width: 39px;
-        height: 39px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 34px;
+        height: 34px;
         border: 1px solid #D9D9D9;
         border-radius: 100px;
         padding: 8px;
+        margin-top: 2px;
     }
     &Descr{
         font-family: OxaniumMedium;
