--- a/src/components/auth/Auth.scss
+++ b/src/components/auth/Auth.scss
@@ -3,10 +3,10 @@
     height: 50px;
     border: 1px solid #FFFFFF;
     border-radius: 100px;
-    padding: 5px 17px;
+    padding: 5px 8px;
     display: flex;
     justify-content: flex-start;
-    gap: 10px;
+    gap: 20px;
     cursor: pointer;
     margin-top: 50px;
     &:hover{
@@ -22,6 +22,9 @@
         border-radius: 100px;
         padding: 8px;
         margin-top: 2px;
+        img{
+            width: 17px;
+        }
     }
     &Descr{
         font-family: OxaniumMedium;
