--- a/src/components/usersBid/UsersBid.scss
+++ b/src/components/usersBid/UsersBid.scss
@@ -32,7 +32,7 @@
         font-family: OxaniumMedium;
         font-size: 16px;
         color: #FFFFFF;
-        margin-top: -25px;
+        // margin-top: 5px;
     }
     &__userBalance{
         width: 51px;
