--- a/src/pages/userCab/inventory/Inventory.scss
+++ b/src/pages/userCab/inventory/Inventory.scss
@@ -90,7 +90,11 @@
             background: rgba(74, 72, 74, 0.5);
             border: 1px solid #FF4343;
             border-radius: 10px;
-            padding: 32px 37px;
+            // padding: 32px 37px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
         &Add{
             width: 30px;
@@ -116,11 +120,15 @@
             margin-top: 10px;
         }
         &Button{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             width: 140px;
             height: 53px;
             background: rgba(74, 72, 74, 0.5);
             border-radius: 10px;
-            padding: 13px 25px;
+            // padding: 13px 25px;
             margin-top: 8px;
             &:hover{
                 background: rgba(119, 116, 119, 0.5);
