--- a/src/pages/jackrunGame/gameJackrun/GameJackrun.scss
+++ b/src/pages/jackrunGame/gameJackrun/GameJackrun.scss
@@ -410,7 +410,11 @@
                 background: rgba(74, 72, 74, 0.5);
                 border: 1px solid #FF4343;
                 border-radius: 10px;
-                padding: 32px 37px;
+                // padding: 32px 37px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
             }
             &Add{
                 width: 30px;
@@ -440,7 +444,11 @@
                 height: 53px;
                 background: rgba(74, 72, 74, 0.5);
                 border-radius: 10px;
-                padding: 13px 25px;
+                // padding: 13px 25px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
                 margin-top: 8px;
                 &:hover{
                     background: rgba(119, 116, 119, 0.5);
